Upgraded to latest mvn hpi versions. Made some usability improvements.